--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
             rel="stylesheet"
         />
 
-        <title>Telegram Clone</title>
+        <title>Web messenger</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
